--- a/public/index.html
+++ b/public/index.html
@@ -8,6 +8,7 @@
     <meta name="description" content="Jacksen Ng's Portfolio Website" />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
+    <link href="https://fonts.googleapis.com/css2?family=Quicksand:wght@300;400;500;600;700&display=swap" rel="stylesheet">
     <title>Jacksen's Portfolio</title>
     <base href="/" />
   </head>
